# django-revproxy

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  TODO.rst  codecov.yml  pyproject.toml  response.py  setup.py  tox-copy.ini  tox.ini  views.py
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  info.rst  introduction.rst  make.bat  modules.rst  proxyview.rst  quickstart.rst  requirements.txt  revproxy.rst  settings.rst
revproxy/: __init__.py  apps.py  connection.py  exceptions.py  middleware.py  pool.py  response.py  settings.py  transformer.py  utils.py  views.py
sample_project/sample_app/: apps.py  urls.py  views.py
sample_project/sample_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: custom_diazo.xml  diazo.xml  run.py  settings.py  test.db  test_connection.py  test_pool.py  test_request.py  test_response.py  test_transformer.py  test_utils.py  test_views.py  urls.py  utils.py
tests/templates/: diazo_with_context_data.html
tests/test_files/: file_1
